[package]
name = "ll-server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = "3.3"
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
env_logger = "0.8"
log = "0.4"
futures = "0.3.1"
bytes = "0.5.3"
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
uuid = {version="0.8", features=["v4"]}
lazy_static = "1.4"
rand = "0.8"
